# TPL-Code-Language

./: .gitignore  README.md  pyproject.toml
TPL-Language/src/tpl_lang_emir.egg-info/: PKG-INFO  SOURCES.txt
src/tpl/: cli.py  interpreter.py
