[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tpl-lang-emir"
version = "0.1.0"
description = "A tiny table programming language"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["pandas"]

[project.scripts]
tpl = "tpl.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]